Bug 374334 - Uncaught exception with cloneNode method and frameset element.  Patch by Alex Vincent <ajvincent@gmail.com>.  r=jst,sr=jst